tests/valid/Precedence_Valid_3.wys
function main() => void:
    print(1 - 1 + 1)
    print (1 + 1 - 1)
