tests/errors/Parser/ParserBadAssignment.wys
void f():
	42+1 = 43